# demo-cdisc-yaml

./: .gitignore  .pyre_configuration  CLAUDE.md  README.md  generate_adsl_demo.py  pyproject.toml
adamyaml/adam_derivation/derivations/: sql_derivation.py
docs/: _quarto.yml  _sidebar.yml  api.qmd  example_adsl.qmd  example_odm.qmd  index.qmd
script/: prepare_data.py
src/adamyaml/adam_derivation/: engine.py
src/adamyaml/adam_derivation/derivations/: function_derivation.py  sql_derivation.py
src/adamyaml/adam_derivation/functions/: __init__.py
src/adamyaml/adam_derivation/loaders/: sdtm_loader.py
src/adamyaml/adam_derivation/utils/: logger.py
src/adamyaml/adam_spec/: adam_spec.py  merge_yaml.py  schema_validator.py
src/adamyaml/adam_spec/tests/: test_adam_spec.py  test_merge_yaml.py  test_schema_validator.py
src/adamyaml/adam_validation/: data_validator.py
src/odm/: __init__.py  load.py
src/odm/tests/: __init__.py  test_load.py
